Fixed project spacing

--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -19,9 +19,12 @@
     }
 }
 
+div {
+    display: grid;
+    margin: 0 50vw 10vh 0;
+}
 
 a {
-    margin-right: 50%;
     color: inherit;
     text-decoration: none;
 }
@@ -34,8 +37,8 @@ h2 {
     box-shadow: 0px 0px 14px 1px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 14px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 14px 1px rgba(0,0,0,0.75);
-    margin-left: 2vw;
-    width: 50vw;
+    margin-left: 10vw;
+    width: 80vw;
     margin-bottom: -10vh;
     animation: 1s ease slideInFromRight;
     float: right;
